# web-agent-collection-offline-dataset

./: .gitignore  README.md  mise.toml  pyproject.toml
mise/: config.toml
mise/tasks/db/: clean  init  migrate
src/wac_lab/: mise.toml  requirements.txt  rxconfig.py
src/wac_lab/assets/: styles.css
src/wac_lab/wac_lab/: __init__.py  constants.py  logger.py  models.py  navigation.py  state.py  styles.py  template.py  wac_lab.py
src/wac_lab/wac_lab/common/: api_utils.py  external_tools.py  file_utils.py
src/wac_lab/wac_lab/components/: component_states.py  home_components.py  navigation.py  task_components.py
src/wac_lab/wac_lab/datatypes/: approval_status.py  task_types.py
src/wac_lab/wac_lab/external_tools/: cohere_api.py  generate.py
src/wac_lab/wac_lab/pages/: __init__.py  basic.py  index.py  newtask.py  newtask_route.py  plugin_route.py  routes.py  settings.py  settings_route.py  tasks.py  tasks_route.py
src/wac_lab/wac_lab/plugins/: clippy.py  clippy_controller.py  plugin.py  plugin_manager.py
src/wac_lab/wac_lab/state/: running_task.py  state.py
src/wac_lab/wac_lab/templates/: template.py
src/wac_lab_app/: pyproject.toml  rxconfig.py
src/wac_lab_app/tests/: test_app.py
src/wac_lab_app/wac_lab/: constants.py  models.py
src/wac_lab_app/wac_lab/common/: file_utils.py
src/wac_lab_app/wac_lab/components/: component_states.py  home_components.py  task_components.py
src/wac_lab_app/wac_lab/datatypes/: approval_status.py  task_types.py
src/wac_lab_app/wac_lab/external_tools/: cohere_api.py  generate.py
src/wac_lab_app/wac_lab/pages/: plugin_route.py  routes.py
src/wac_lab_app/wac_lab/plugins/: __init__.py  plugin_manager.py  tinydb.py
src/wac_lab_app/wac_lab/state/: running_task.py  state.py
src/wac_plugins/: clippy.py
src/wac_plugins/clippy/: __init__.py  clippy.py  crawler.py
src/wac_plugins/clippy/adapters/: ws_conn.py
src/wacommon/: log.py
src/web_agent_collection_offline_dataset/: __init__.py
tests/: test_plugins.py
tests/test_wac_lab/: test_external_tools.py
