[project]
    name = "web-agent-collection-offline-dataset"
    version = "0.0.0"
    description = "WACOFFDataset"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = [
        "transformers @ git+https://github.com/huggingface/transformers.git",
        "reflex>=0.5.7",
        "pillow>=10.4.0",
        "wac-lab @ file:///${PROJECT_ROOT}/src/wac_lab",
        "torch>=2.4.0",
        "torchvision>=0.19.0",
    ]
    requires-python = ">=3.11"
    readme = "README.md"
    license = { text = "None" }
    includes = ["src/wac_lab"]

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"

[tool.pdm]
    distribution = true
    package-dir = "src/wac_lab"

    [tool.pdm.build]
        includes = ["scripts", "src/wac_lab"]
        source-includes = ["scripts", "src/wac_lab"]

    [tool.pdm.packages]
        # Define your packages with the path to the sources
        packages = [{ include = "wac_lab", from = "src/wac_lab" }]

    [tool.pdm.scripts] # NOTE: prefer using mise for running scripts
        info = { cmd = "which reflex" }
        app = { cmd = "reflex run", working_dir = "src/wac_lab" }

[tool.ruff]
    line-length = 120

    [tool.ruff.lint]
        select = [
            # Pyflakes
            "F",
            # Pycodestyle
            "E",
            "W",
            # isort
            "I001",
        ]
        # ignore __init__ for import error
        [tool.ruff.lint.per-file-ignores]
            "__init__.py" = ["F401"]

        [tool.ruff.lint.isort]
            known-first-party = ["wac_lab", "wacommon"]

            # lines-between-types = 1
            lines-after-imports = 2
